[gd_scene load_steps=2 format=3 uid="uid://fidget_game_ui"]

[ext_resource type="Script" path="res://scenes/game_ui.gd" id="1_ui"]

[node name="GameUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ui")

[node name="TapContainer" type="Control" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="TapCounterLabel" type="Label" parent="TapContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(150, 50)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="TapContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 120.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 20
text = "Lifetime: 0"
horizontal_alignment = 1

[node name="StreakLabel" type="Label" parent="TapContainer"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 155.0
offset_bottom = 195.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 24
text = "5x combo!"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 100.0
offset_bottom = 100.0
theme_override_font_sizes/font_size = 24
text = "<"

[node name="PausePanel" type="Panel" parent="."]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PausedLabel" type="Label" parent="PausePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "RESUME"

[node name="MenuBtn" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "MAIN MENU"

[connection signal="pressed" from="BackButton" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PausePanel/VBox/ResumeBtn" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePanel/VBox/MenuBtn" to="." method="_on_menu_pressed"]
